--- a/RetiroDeMateriales.csproj
+++ b/RetiroDeMateriales.csproj
@@ -46,6 +46,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Datos\AccesoDatosDAO.cs" />
     <Compile Include="Datos\Implementacion\DetallesOrdenDAO.cs" />
     <Compile Include="Datos\Implementacion\MaterialesDAO.cs" />
     <Compile Include="Datos\Implementacion\OrdenesRetiroDAO.cs" />
@@ -71,8 +72,8 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Servicio\IServicio.cs" />
-    <Compile Include="Servicio\Servicio.cs" />
+    <Compile Include="Servicios\IServicio.cs" />
+    <Compile Include="Servicios\Servicio.cs" />
     <EmbeddedResource Include="Presentaciones\FrmNuevoRetiro.resx">
       <DependentUpon>FrmNuevoRetiro.cs</DependentUpon>
     </EmbeddedResource>
@@ -87,6 +88,7 @@
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
